# url-shortener

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
migrations/2019-08-16-113925_shortener/: up.sql
src/: generator.rs  main.rs  middleware.rs  model.rs  msg.rs  schema.rs  shorten.rs  unshorten.rs
