[package]
name = "shortener"
version = "0.1.0"
authors = ["Mathieu <mathieu@10ten.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
serde = "1.0.98"
serde_derive = "1.0.98"
serde_json = "1.0.40"
nanoid = "0.2.0"
